--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,6 @@ test:
   adapter: test
 
 production:
-  adapter: redis
+  adapter: memurai
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
   channel_prefix: hotel_production
