--- a/config/database.yml
+++ b/config/database.yml
@@ -16,12 +16,12 @@
 #
 default: &default
   adapter: postgresql
-  host: localhost
+  host: <%= ENV['DATABASE_HOST'] %>
   encoding: unicode
-  database: hotel
+  database: <%= ENV['POSTGRES_DB'] %>
   pool: 5
   timeout: 5000
-  username: postgres
+  username: <%= ENV['POSTGRES_USER'] %>
   password: postgres
 
 development:
