--- a/config/database.yml
+++ b/config/database.yml
@@ -18,11 +18,12 @@ default: &default
   adapter: postgresql
   host: <%= ENV['DATABASE_HOST'] %>
   encoding: unicode
-  database: <%= ENV['POSTGRES_DB'] %>
+  database: <%= ENV['DATABASE_NAME'] %>
   pool: 5
   timeout: 5000
   username: <%= ENV['POSTGRES_USER'] %>
-  password: postgres
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
 
 development:
   <<: *default
