--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "webpack-dev-server": "3"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
+    "build": "webpack"
   }
 }
