--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "hotel",
+  "license": "MIT",
+  "version": "0.0.1",
   "dependencies": {
     "@rails/activestorage": "7.0.4",
     "@rails/webpacker": "5.4.3",
