--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "webpack-dev-server": "3"
   },
   "scripts": {
-    "build": "rails webpacker:compile"
+    "build": "rails webpacker:install"
   }
 }
