--- a/package.json
+++ b/package.json
@@ -1,1 +1,19 @@
-
+{
+  "name": "hotel",
+  "license": "MIT",
+  "version": "0.0.1",
+  "dependencies": {
+    "@rails/activestorage": "7.0.4",
+    "@rails/webpacker": "5.4.3",
+    "activestorage": "^5.2.8-1",
+    "jquery": "^3.6.1",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "3"
+  },
+  "scripts": {
+    "build": "rails webpacker:install"
+  }
+}
