--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,25 @@ services:
       - POSTGRES_PASSWORD
       - REDIS_HOST
       - REDIS_PASSWORD
+      - REDIS_URL
       - PGPASSWORD
+      - MAILER_USER
+      - MAILER_PASSWORD
+      - API_KEY
     command: bundle exec rails server -b 0.0.0.0
   sidekiq:
     build: .
     volumes:
       - .:/myapp
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST
+      - REDIS_PASSWORD
+      - REDIS_URL
+      - MAILER_USER
+      - MAILER_PASSWORD
+      - API_KEY
     command: bundle exec sidekiq
   db:
     image: postgres
@@ -35,6 +48,7 @@ services:
       - POSTGRES_PASSWORD
       - REDIS_HOST
       - REDIS_PASSWORD
+      - REDIS_URL
       - PGPASSWORD
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
@@ -42,5 +56,5 @@ services:
     image: redis
     ports:
       - "6379:6379"
-    command: >
-          --requirepass ${REDIS_PASSWORD}
+    command:
+      - redis-server
